@@ -359,9 +359,6 @@ Lintian-Tags: debug-symbol-migration-possibly-complete
 Fix-Script: desktop-entry-contains-encoding-key.py
 Lintian-Tags: desktop-entry-contains-encoding-key
 
-Fix-Script: no-dh-sequencer.py
-Lintian-Tags: no-dh-sequencer
-
 Fix-Script: invalid-standards-version.py
 Lintian-Tags: invalid-standards-version
 
