@@ -1,2 +1,0 @@
-%:
-	dh $* --with=blah
