@@ -1,2 +1,0 @@
-Use dh $@ sequencer.
-Fixed-Lintian-Tags: no-dh-sequencer
